# Modul-9-2.5-intermediate

./: .env.example  README.md  pyproject.toml
hands-on/: chat_with_your_docs.py  deepeval_rag.py  minimumrag.py
samples/: LAPORAN PENJUALAN DAN DATA BISNIS.docx
samples/articles/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt
