[project]
name = "intermediate-05"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camelot-py>=1.0.9",
    "chromadb>=1.3.6",
    "deepeval>=3.7.2",
    "google-genai>=1.52.0",
    "gradio>=6.1.0",
    "langchain>=1.1.3",
    "langchain-chroma>=1.0.0",
    "langchain-google-genai>=3.2.0",
    "langchain-huggingface>=1.1.0",
    "langchain-openai>=1.1.1",
    "langchain-text-splitters>=1.0.0",
    "marker-pdf>=1.6.1",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "pymupdf>=1.26.6",
    "pymupdf4llm>=0.2.6",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "sentence-transformers>=5.1.2",
    "tabulate>=0.9.0",
    "unstructured[local]>=0.18.21",
]
